# final-project_c--

./: .gitignore  CMakeLists.txt  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchServer.cpp  SearchServer.h  config.json  converterJson.cpp  converterJson.h  main.cpp  requests.json  test.cpp  utilis.cpp
